examples/test/testpolicy8861.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8861
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key11: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value39
          key21: value13
      podSelector:
        matchLabels:
          key20: value47
          key12: value7
          key0: value22
